[gd_scene load_steps=4 format=3 uid="uid://bqw8k3n5qw7po"]

[ext_resource type="Script" path="res://scripts/ui/QueueItem.gd" id="1_item"]
[ext_resource type="Theme" uid="uid://bh3pao1yls74n" path="res://resources/themes/main_theme.tres" id="2_theme"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_item"]
bg_color = Color(0.039, 0.059, 0.118, 0.7)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.463, 1, 0.012, 0.6)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="QueueItem" type="PanelContainer"]
custom_minimum_size = Vector2(100, 40)
mouse_filter = 0
theme = ExtResource("2_theme")
theme_override_styles/panel = SubResource("StyleBoxFlat_item")
script = ExtResource("1_item")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2
mouse_filter = 0
theme_override_constants/separation = 1

[node name="TopRow" type="HBoxContainer" parent="VBox"]
layout_mode = 2
mouse_filter = 0
theme_override_constants/separation = 3

[node name="IconRect" type="TextureRect" parent="VBox/TopRow"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="NameLabel" type="Label" parent="VBox/TopRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 9
text = "Mining"
clip_text = true
text_overrun_behavior = 3

[node name="CountLabel" type="Label" parent="VBox/TopRow"]
layout_mode = 2
theme_override_colors/font_color = Color(0.463, 1, 0.012, 1)
theme_override_font_sizes/font_size = 9
text = "x1"

[node name="CancelButton" type="Button" parent="VBox/TopRow"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "X"

[node name="ProgressBar" type="ProgressBar" parent="VBox"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
value = 33.0
show_percentage = false

[node name="ETALabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.898, 1, 0.8)
theme_override_font_sizes/font_size = 8
text = "5.0s"
horizontal_alignment = 1
